CS_PROD_20150209_01/Metadata/unpackaged/objects/Broadcast_Item__c.object
<CustomObject>
    <fields>
        <fullName>DVD_Video_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;DVD - Video&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Standard (720x480)&quot;),
     165,
          IF(ISPICKVAL(Product_Detail__c , &quot;Blu-Ray (1280x720)&quot;),
          295,
          0
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DVD - Video Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/22/2013; suggested by Ed for a future workflow</description>
        <label>Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DigiCombo_Data_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;),
     235,
          IF(ISPICKVAL(Product_Detail__c , &quot;High Res (720x480)&quot;),
          245,
               IF(ISPICKVAL(Product_Detail__c, &quot;HD (1280x720)&quot;),
                500,
                 0
                   )
           )
     )
,0
)</formula>
        <label>DigiCombo - Data Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DigiCombo_Video_Detail_costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;),
     235,
          IF(ISPICKVAL(Product_Detail__c , &quot;High Res (720x480)&quot;),
          245,
               IF(ISPICKVAL(Product_Detail__c, &quot;HD (1280x720)&quot;),
                500,
                 0
                   )
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DigiCombo - Video Detail costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Clip_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;),
     195,
          IF(ISPICKVAL(Product_Detail__c , &quot;High Res (720x480)&quot;),
          220,
               IF(ISPICKVAL(Product_Detail__c, &quot;Radio&quot;),
                125,
                      IF(ISPICKVAL(Product_Detail__c, &quot;HD (1280x720)&quot;),
                        295,
                         0
                          )
                   )
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Clip Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Only applies to Item before Fees. This does not include or display the Account Level Discount.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_Not_Print_On_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to prevent the Broadcast Item from being displayed when printing Broadcast Labels.</description>
        <inlineHelpText>This is to prevent the Broadcast Item from being displayed when printing Broadcast Labels.</inlineHelpText>
        <label>Do Not Print On Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Download&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Broadcast Quality (720x480)&quot;),
     150,
          IF(ISPICKVAL(Product_Detail__c , &quot;Web Quality (320x240)&quot;),
          150,
                 0
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Added by LM on 2/22/2013; From NetSuite</description>
        <formula>Opportunity__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit_Fee__c</fullName>
        <label>Edit Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Editing_Fee__c</fullName>
        <label>Editing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Editor__c</fullName>
        <description>Added by LM on 2/28/2013; From NetSuite</description>
        <label>Editor</label>
        <picklist>
            <picklistValues>
                <fullName>*AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Moore, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Moore, N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Robinson, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Schoening, Y.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Scott, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH-Tye, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat-Hansen, T.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat-Kendall, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Cantero, A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ellis, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Lang, J.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Ream, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Samperisi, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR-Spearman, A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Amyot, B.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Codner, S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Devivo, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Lee, D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Leslie, L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Liatsis, M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-McKeon, E.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY-Regan, K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rpts-Johnson, C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rpts-Support Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rpts-Support Specialist II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rpts-Support Specialist III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rpts-Wilson, S.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Episode_Title__c</fullName>
        <label>Episode Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exact_Item_Description__c</fullName>
        <label>Exact Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_Add_l_10_Min_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Add&apos;l 10 Min Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_After_Hours_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude After Hours Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Archive_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Archive Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Canadian_Market_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Canadian Market Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_HD_Archive_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude HD Archive Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Int_l_Market_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Int&apos;l Market Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Outside_Market_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Outside Market Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Rush_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Rush Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Package_Depletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Package Depletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <picklist>
            <picklistValues>
                <fullName>Editing Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Archive Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Fee (Custom Package)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Format Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translation Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Hours Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc - Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquisition Fee +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royalty Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive Fee +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Market +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinChrg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Rate Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Credit - Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Forward</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Format_Options__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Format Options</label>
        <picklist>
            <picklistValues>
                <fullName>Windows Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quicktime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other - see  order instructions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <description>Added by LM on 3/25/2013; From NetSuite</description>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>** VIP CLIENT **</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>** VIP CLIENT ** - Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**CA-NA DNR Reroute RUSH**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Route to MR**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Split Required**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**TR-Review**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiCombo Promo RUSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in Production Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mis-Routed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor Footage Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Internal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionable Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R*U*S*H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R*U*S*H - Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HD_Archive_Fee__c</fullName>
        <formula>IF(  ISPICKVAL(Product_Detail__c, &quot;HD (1280x720)&quot;) || ISPICkVAL(Product_Detail__c, &quot;Blu-Ray (1280x720)&quot;), 

IF(  Archive_Months__c &lt; 1, 
0,
IF(  Archive_Months__c &lt;= 6, 
150,
     IF( Archive_Months__c &lt;= 12,
     250,
            IF( Archive_Months__c &lt;= 24,
            400,
                 IF(Archive_Months__c &lt;= 60,
                  1000,
                       IF(Archive_Months__c &gt; 60,
                           2000,
                       0)
                  ) 
            )
     )
)

), 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HD Archive Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HD_Clip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 12/2/2013 for Trevor.</description>
        <label>HD Clip?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_many_Clip_Packages_to_pay_for_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If using additional Clip Packages to pay for downstream fees, enter the number of additional Clip Packages being used to cover those fees.</inlineHelpText>
        <label>How many Clip Packages to pay for Fees?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_l_Market_Fee__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Canadian_International_Markets__c, &quot;&quot;)),
   IF(ISPICKVAL(Canadian_International_Markets__c, &quot;IM: International [IM]&quot;),
     150,
     0
   ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int&apos;l Market Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Item_Pricing__c</fullName>
        <formula>CASE( Inventory_Item__c , 
&quot;Buzz Report&quot;, 500, 
&quot;Sizzle Video&quot;, 2995,
&quot;Digital Pictures&quot;, 295,
&quot;Copy Fee&quot;, 50,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Item - Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Item__c</fullName>
        <label>Inventory Item</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiCombo - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiCombo - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add’l Digital Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report - Ad-Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report - Flat Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report - Per Hit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Hours Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <label>Item #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned - Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned - Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Voided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>A concatenation field meant to display all the pertinent Broadcast Item / Product detail information in one field for use in Related List columns.</description>
        <formula>IF(AND(Search_Fee__c &gt;0, ISPICKVAL(Search_Request_Status__c, &quot;Not Found&quot;)), &quot;Search Fee&quot;, IF (ISBLANK(TEXT(Product_Detail__c)), TEXT(Inventory_Item__c) &amp; IF(INCLUDES(Attributes__c, &quot;Buzz Graph&quot;), &quot; - Buzz Graph&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Slate(s)&quot;), &quot; - Slate(s)&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Teaser&quot;), &quot; - Teaser&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Nielsen (TV)&quot;), &quot; - Nielsen (TV)&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Arbitron (Radio)&quot;), &quot; - Arbitron (Radio)&quot;,&quot;&quot;) , TEXT(Inventory_Item__c)  &amp; &quot; - &quot; &amp;  TEXT(Product_Detail__c) &amp; IF(INCLUDES(Attributes__c, &quot;Buzz Graph&quot;), &quot; - Buzz Graph&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Slate(s)&quot;), &quot; - Slate(s)&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Teaser&quot;), &quot; - Teaser&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Nielsen (TV)&quot;), &quot; - Nielsen (TV)&quot;,&quot;&quot;) &amp; IF(INCLUDES(Attributes__c, &quot;Arbitron (Radio)&quot;), &quot; - Arbitron (Radio)&quot;,&quot;&quot;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broadcast_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount added to the Price Before Fees to produce &quot;Total Price Before Fees&quot;</description>
        <inlineHelpText>This field is for any pricing adjustments to increase the price before fees. Only the &quot;Total Price Before Fees&quot; field will appear on the invoice - i.e. clients will NOT see this adjustment.</inlineHelpText>
        <label>Market Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Station__c</fullName>
        <formula>IF(ISBLANK(Text(US_Markets__c )), IF(ISBLANK(Text(Cable_National_Markets__c )), IF(ISBLANK(Text( Canadian_International_Markets__c)), IF(ISBLANK(Text( Radio_Markets__c)), IF(ISBLANK(Write_In_Station__c),&quot;&quot;, Write_In_Station__c), Text( Radio_Markets__c) &amp; &quot; - &quot; &amp; IF(ISBLANK(Text( Radio_Stations__c)), Write_In_Station__c, Text( Radio_Stations__c))), Text( Canadian_International_Markets__c) &amp; &quot; - &quot; &amp; IF(ISBLANK(Text(Canadian_International_Stations__c)), Write_In_Station__c, Text(Canadian_International_Stations__c)) ) , Text(Cable_National_Markets__c ) &amp; &quot; - &quot; &amp; IF(ISBLANK(Text(Cable_National_Stations__c)), Write_In_Station__c, Text(Cable_National_Stations__c))) , Text(US_Markets__c) &amp; &quot; - &quot; &amp; IF(ISBLANK(Text(US_Stations__c)), Write_In_Station__c, Text(US_Stations__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market/Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>IF(ISBLANK(Text(US_Markets__c )),IF(ISBLANK(Text(Cable_National_Markets__c )),IF(ISBLANK(Text(Canadian_International_Markets__c )),IF(ISBLANK(Text(Radio_Markets__c )),&quot;&quot;, Text(Radio_Markets__c)), Text(Canadian_International_Markets__c )), Text(Cable_National_Markets__c )), Text(US_Markets__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Misc. Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monitor_Charge__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Monitor Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monitor_Invoice__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Monitor Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Name__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Monitor Name</label>
        <picklist>
            <picklistValues>
                <fullName>Admix Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affordable News Clips of Utah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircheck News Taping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albuquerque Media Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Broadcast Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayaud Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Media Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Ribbon Video Productions - Yakima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Monitors - NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Connection (Media Archive Retrieval Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central States Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clovis Video Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus News Clips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conn Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Media Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutaway Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dateline Media - Honolulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dateline Media Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digiclips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do It Yourself Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erie News Trax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal News Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Frame Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flame Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gene Stewart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitor_Quality_Rating__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Monitor Quality Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1. Questionable Quality [pixilation, coarse graininess, artifacts]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Web Quality [by comparison with CM]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. DVD Quality [by comparison with in-house DVD]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Broadcast Quality [by comparison with CM]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. HD Quality [by comparison with in-house HD, 16:9 aspect ratio, 720P]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negative_Adjustment__c</fullName>
        <inlineHelpText>This is the Negative Adjustment applied to the Subtotal for Redo Items and Clip Packages.</inlineHelpText>
        <label>Negative Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negative_Adjustment_form__c</fullName>
        <formula>Subtotal_w_Discount__c   -  Total_Price_Before_Fees__c  -  Total_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nielsen_Custom_Pricing__c</fullName>
        <inlineHelpText>Used with the Report Inventory Item</inlineHelpText>
        <label>Nielsen Custom Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Hits__c</fullName>
        <inlineHelpText>Used for pricing with &quot;Report - Per Hit&quot; inventory item</inlineHelpText>
        <label>Number of Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldStation__c</fullName>
        <label>OldStation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Invoice__c</fullName>
        <formula>Opportunity__r.Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Item_Number__c</fullName>
        <label>Opportunity Item Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
</CustomObject>